--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -166,7 +166,7 @@
 </section> -->
 	<p>You can get many types of information from the CRA without sending a formal information request.This is often the <b>fastest way</b> to get the information you need.</p>  
 	<p>The following information that CRA does not have:</p> 
-	<ul> 
+	<ul class="fa-ul">
 	<li><span class="fas fa-times text-danger fa-li"></span>Information about administering social insurance numbers (applications, replacements for lost or stolen cards, or forgotten numbers) or employment insurance. Please go to <a href="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html"> Serive Canada.</a> </li> 
 	<li><span class="fas fa-times text-danger fa-li"></span>Information about your travel history outside Canada.. Please go to <a href="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html"> Canada Border Services Agency.</a> </li> 	
 </ul>
