--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Access to information and privacy (ATIP) - CRA</h1>
+		<h1 property="name" id="wb-cont" class="gc-thickline">Access to information and privacy at the CRA</h1>
 </div>
 
 	<p>The Canada Revenue Agency (CRA) must follow the requirements set by the <a href="https://laws-lois.justice.gc.ca/eng/acts/a-1/">Access to Information Act </a> 
@@ -158,7 +158,7 @@
 		<nav class="gc-subway provisional">
 			<h2>Sections</h2>
 			<dl>
-				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy (ATIP)</a></dt>
+				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is access to information and privacy (ATIP)</a></dt>
 				<dd>Description of Access to information and Privacy at the CRA</dd>
 				
 				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP request </a></dt>
