Update what is Access to information and privacy at CRA.html

--- a/what is Access to information and privacy at CRA.html
+++ b/what is Access to information and privacy at CRA.html
@@ -146,7 +146,7 @@
 		<nav class="gc-subway provisional">
 			<h1>Access to information and privacy (ATIP) - CRA  </h1>
 			<ul>
-				<li><a href="#" class="active">What is Access to information and Privacy (ATIP) </a></li>
+				<li><a href="#" class="active">What is access to information and privacy (ATIP) </a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">Get ready to make a request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to send an ATIP request</a></li>
@@ -156,7 +156,7 @@
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">What is Access to information and Privacy (ATIP)</h1> 
+		<h1 property="name" id="wb-cont" class="gc-thickline">What is access to information and privacy (ATIP)</h1> 
 	<p>ATIP is a process that allows public access to information about government activities, and protection and access to personal data collected by the CRA and other government institutions.</p>
 
 	<h2>Access to information</h2> 
