--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -159,7 +159,7 @@
 		<h1 property="name" id="wb-cont" class="gc-thickline">Get ready to make a request </h1>  
 	<section class="alert alert-info">
 	<h3>A new approach for handling certain personal tax information and benefits requests from representatives </h3>
- 	<p>Effective September 10, 2024, the CRA is updating its process. The ATIP Directorate will no longer process your requests for your client’s:  
+ 	<p>Effective September 10, 2024, the CRA is updating its process. The ATIP Directorate will <b>no longer</b> process your requests for your client’s:  
 	<ul> 
 	 	<li>Income statements from the last 3 years  </li> 
 		<li>Notices of assessment</li>  
