--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -146,7 +146,7 @@
 		<nav class="gc-subway provisional">
 			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
 		<ul>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what%20is%20Access%20to%20information%20and%20privacy%20at%20CRA.html">What is Access to information and Privacy (ATIP) </a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what%20is%20Access%20to%20information%20and%20privacy%20at%20CRA.html">What is Access to information and privacy (ATIP) </a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
 				<li><a href="#" class = "active">Get ready to make a request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to send an ATIP request</a></li>
