--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -146,7 +146,7 @@
 		<nav class="gc-subway provisional">
 			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
 			<ul>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what%20is%20Access%20to%20information%20and%20privacy%20at%20CRA.html">What is Access to information and Privacy (ATIP) </a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what%20is%20Access%20to%20information%20and%20privacy%20at%20CRA.html">What is Access to information and privacy (ATIP) </a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">Get ready to make a request</a></li>
 				<li><a href="#" class="active">How to submit an ATIP request</a></li>
@@ -157,8 +157,8 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">How to send an ATIP request</h1> 
-	<h2>Online</h2>
-		<p>An ATIP online account allows you to send ATIP requests to any government institution that is subject to the Access to Information Act or the Privacy Act, including the CRA.</p>
+	<h2>ATIP online request service</h2>
+		<p>The ATIP online request services (AORS) portal allows you to send ATIP requests to most government institutions that are subject to the <i>Access to Information Act</i> or the <i>Privacy Act</i>, including the CRA.</p>
 		<p>When you create an account, you can:</p>
 		<ul> 
 			<li>Receive a copy of your records electronically</li> 
@@ -168,11 +168,11 @@
 
 		<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
 			<li class="cnjnctn-col">
-				<h3 class="h4 mrgn-tp-sm text-muted">I have an ATIP online account<span class="wb-inv">: Option 1</span></h3>
+				<h3 class="h4 mrgn-tp-sm text-muted">I have an ATIP AORS account<span class="wb-inv">: Option 1</span></h3>
 				<p class="mrgn-bttm-lg"><a class="btn btn-primary btn-lg btn-block p-sm-3" href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/make-request.html"<span class="h4">Send an ATIP request</a></span></p>
 			</li>
 			<li class="cnjnctn-col">
-				<h3 class="h4 mrgn-tp-sm text-muted">I want to create an account<span class="wb-inv">: Option 2</span></h3>
+				<h3 class="h4 mrgn-tp-sm text-muted">I want to create an ATIP AORS account<span class="wb-inv">: Option 2</span></h3>
 				<p><a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/create-secure-atip-online-account.html" class="btn btn-default btn-lg btn-block p-sm-3"><span class="h4"><span class="fa-lg mrgn-rght-sm fa-pull-left"></span>Create an ATIP online account</span></a></p>
 			</li>
 		</ul>
