--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -144,7 +144,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 <!-- Navigation menu and first H1 -->
 		<nav class="gc-subway provisional">
-			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
+			<h1>Access to information and privacy at the CRA  </h1>
 			<ul>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what%20is%20Access%20to%20information%20and%20privacy%20at%20CRA.html">What is Access to information and privacy (ATIP) </a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
@@ -168,11 +168,11 @@
 
 		<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
 			<li class="cnjnctn-col">
-				<h3 class="h4 mrgn-tp-sm text-muted">I have an ATIP AORS account<span class="wb-inv">: Option 1</span></h3>
+				<h3 class="h4 mrgn-tp-sm text-muted">I have an AORS account<span class="wb-inv">: Option 1</span></h3>
 				<p class="mrgn-bttm-lg"><a class="btn btn-primary btn-lg btn-block p-sm-3" href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/make-request.html"<span class="h4">Send an ATIP request</a></span></p>
 			</li>
 			<li class="cnjnctn-col">
-				<h3 class="h4 mrgn-tp-sm text-muted">I want to create an ATIP AORS account<span class="wb-inv">: Option 2</span></h3>
+				<h3 class="h4 mrgn-tp-sm text-muted">I want to create an AORS account<span class="wb-inv">: Option 2</span></h3>
 				<p><a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/create-secure-atip-online-account.html" class="btn btn-default btn-lg btn-block p-sm-3"><span class="h4"><span class="fa-lg mrgn-rght-sm fa-pull-left"></span>Create an ATIP online account</span></a></p>
 			</li>
 		</ul>
