--- a/ways-to-receive.html
+++ b/ways-to-receive.html
@@ -144,9 +144,9 @@
 <main role="main" property="mainContentOfPage" class="container">
 <!-- Navigation menu and first H1 -->
 		<nav class="gc-subway provisional">
-			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
+			<h1>Access to information and privacy at the CRA  </h1>
 			<ul>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy (ATIP)</a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is access to information and privacy (ATIP)</a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">Get ready to make a request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to send an ATIP request</a></li>
