--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <title>Contact us - Canada.ca</title>
+      <title>Contact CRA's ATIP Directorate - Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport"/>
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
@@ -144,9 +144,9 @@
 <main role="main" property="mainContentOfPage" class="container">
 <!-- Navigation menu and first H1 -->
 		<nav class="gc-subway provisional">
-			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
+			<h1>Access to information and privacy at the CRA </h1>
 			<ul>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy (ATIP)</a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and privacy (ATIP)</a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">Get ready to make a request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to send an ATIP request</a></li>
