--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <title>Access to information and privacy at the Canada Revenue Agency</title>
+      <title>Access to information and privacy at the CRA</title>
       <meta content="width=device-width,initial-scale=1" name="viewport"/>
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
