Update what is Access to information and privacy at CRA.html

--- a/what is Access to information and privacy at CRA.html
+++ b/what is Access to information and privacy at CRA.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <title>What is Access to information and Privacy (ATIP) - Canada.ca</title>
+      <title>What is Access to information and privacy (ATIP) - Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport"/>
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
@@ -144,7 +144,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 <!-- Navigation menu and first H1 -->
 		<nav class="gc-subway provisional">
-			<h1>Access to information and privacy (ATIP) - CRA  </h1>
+			<h1>Access to information and privacy at the CRA  </h1>
 			<ul>
 				<li><a href="#" class="active">What is access to information and privacy (ATIP) </a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
@@ -160,13 +160,13 @@
 	<p>ATIP is a process that allows public access to information about government activities, and protection and access to personal data collected by the CRA and other government institutions.</p>
 
 	<h2>Access to information</h2> 
-	<p>The Access to Information Act allows individuals to request records from federal institutions. It aims to enhance openness and accountability by providing the public with a process to obtain information about <b>government activities</b> that is not readily available. </p> 
+	<p>The <i>Access to Information Act</i> allows individuals to request records from federal institutions. It aims to enhance openness and accountability by providing the public with a process to obtain information about <b>government activities</b> that is not readily available. </p> 
 	<p>You can access many types of information about government activities without sending a formal access to information request. </p> 
 	<p>There is a <b>$5 fee</b> for access to information requests. </p> 
 	<p>The process may take <b>at least 30 days.</b></p> 
 
 	<h2>Privacy</h2> 
-	<p>The Privacy Act governs how federal institutions handle personal information. It ensures that individuals have the right to access <b>personal information</b> held by the government and sets strict controls on how this information is collected, used, disclosed, and disposed of.  </p> 
+	<p>The <i>Privacy Act</i> governs how federal institutions handle personal information. It ensures that individuals have the right to access <b>personal information</b> held by the government and sets strict controls on how this information is collected, used, disclosed, and disposed of.  </p> 
 	<p>You can access a lot of your personal information without sending a formal personal information request.</p> 
 	<p>There is <b>no fee</b> for personal information requests. </p> 
 	<p>The process may take <b>at least 30 days.</b></p>
