--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -144,7 +144,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 <!-- Navigation menu and first H1 -->
 		<nav class="gc-subway provisional">
-			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
+			<h1>Access to information and privacy at the CRA </h1>
 			<ul>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what%20is%20Access%20to%20information%20and%20privacy%20at%20CRA.html">What is access to information and privacy (ATIP) </a></li>
         			<li><a href="#" class="active">Find information that is available without an ATIP requset </a></li>
