--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -144,7 +144,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 <!-- Navigation menu and first H1 -->
 		<nav class="gc-subway provisional">
-			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
+			<h1>Access to information and privacy at the CRA </h1>
 		<ul>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what%20is%20Access%20to%20information%20and%20privacy%20at%20CRA.html">What is Access to information and privacy (ATIP) </a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
@@ -169,8 +169,8 @@
 	<p>For more information:<a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html"> Changes to access to information and privacy requests</a></p>
 </section>
 	<p>If you can’t find the information you are looking for, you can make a formal ATIP request. This process may take <b>at least 30 days</b>.</p>   
-<p>There is a $5 fee for requests under the Access to Information Act.</p> 
-<p>There is no fee for requests for personal information under the Privacy Act.</p>   
+<p>There is a $5 fee for requests under the <i>Access to Information Act</i>.</p> 
+<p>There is no fee for requests for personal information under the <i>Privacy Act</i>.</p>   
 	
 
   <h2 class="h3">On this page</h2>
@@ -186,7 +186,7 @@
 	<li>a Canadian citizen</li>  
 	<li>a permanent resident of Canada</li> 
 	<li>an individual or corporation currently in Canada</li>  
-	<li>individuals outside of Canada (privacy requests <strong>only</strong>) </li>
+	<li>individuals outside of Canada (under <i>Privacy Act</i> <strong>only</strong>) </li>
 </ul>  
 
 <h2 id="eligibility">What information you need to provide</h2>
