--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<h1 property="name" id="wb-cont" class="gc-thickline">Access to information and privacy at the CRA</h1>
 </div>
 
-	<p>The Canada Revenue Agency must follow the requirements set by the <i><a href="https://laws-lois.justice.gc.ca/eng/acts/a-1/"> <i>Access to Information Act </i> </a></i> 
+	<p>The Canada Revenue Agency (CRA) must follow the requirements set by the <i><a href="https://laws-lois.justice.gc.ca/eng/acts/a-1/"> <i>Access to Information Act </i> </a></i> 
 	and the <i><a href="https://laws-lois.justice.gc.ca/eng/acts/P-21/"> <i>Privacy Act</i></a></i> ,ensuring public access to government records and personal information. The Access to Information and Privacy (ATIP) Directorate, part of the Public Affairs Branch, supports the CRA in meeting its requirements under both acts.</p>
   <!-- <section class="alert alert-info">
   <h3>What's new</h3>
