--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -198,14 +198,14 @@
 <h3 id="h_1_1">Choose the description that applies to you</h3>
 <p class="text-muted gc-font-2019">Make a selection and <strong>scroll down</strong> for further questions and results.</p>
 <div class="wb-frmvld"><form method="get">
-<div class="wb-fieldflow" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noForm&quot;: true, &quot;base&quot;: { &quot;live&quot;: true }, &quot;isoptional&quot;: true, &quot;noreqlabel&quot;: true}"><p>Who is requesting the information ? </p>
+<div class="wb-fieldflow" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noForm&quot;: true, &quot;base&quot;: { &quot;live&quot;: true }, &quot;isoptional&quot;: true, &quot;noreqlabel&quot;: true}"><p>What type of information are you requesting ?</p>
 <ul>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#res_2022, #unsure, #result&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#res_2022, #unsure, #result&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#res_2023&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#res_2023&quot;, &quot;class&quot;: &quot;hidden&quot;}
-                                                ]">an individual requesting for myself <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Are you currently or previously an employee of the Canada Revenue Agency (CRA)?</p>
+                                                ]">Personal information under the requirements of the <i>Privacy Act</i>.    <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Who is requesting the information ? </p>
 <details><summary>What is a partnership?</summary><p>For UHT purposes, in all parts of Canada (other than Quebec), the CRA interprets the term partnership to mean the relationship that exists between persons carrying on a business in common with a view to profit.</p>
 <details><summary>Partnerships constituted in Quebec</summary><p>For partnerships constituted in Quebec, the CRA interprets the term partnership based on the legal definition of contract of partnership in the Civil Code of Quebec:</p>
 <blockquote>“A contract of partnership is a contract by which the parties, in a spirit of cooperation, agree to carry on an activity, including the operation of an enterprise, to contribute thereto by combining property, knowledge or activities and to share among themselves any resulting pecuniary profits”</blockquote>
@@ -478,19 +478,14 @@
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#res_2023, #unsure, #result&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#res_2022&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#res_2022&quot;, &quot;class&quot;: &quot;hidden&quot;}
-                                                ]">a representative requesting on behalf of someone else<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Are you:</p>
-<details><summary>Who is a foreign national?</summary><p>A foreign national is an individual who is <strong>not</strong> a citizen or permanent resident of Canada.</p>
-</details></div>
+                                                ]">Records about government activities under the requirements of the <i>Access to information Act</i>.<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">What category of information are you looking for ?</p>
+</div>
 <ul>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning, #capacity2022, #affected-owner-2022, #capacity-affected2022&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning, #capacity2022, #affected-owner-2022, #capacity-affected2022&quot;, &quot;class&quot;: &quot;visible&quot;}
-                                                ]">A citizen or permanent resident of Canada<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Do you own the residential property as a trustee of any of the following trusts?</p>
-<ul>
-<li>A mutual fund trust for Canadian income tax purposes</li>
-<li>A real estate investment trust for Canadian income tax purposes</li>
-<li>A specified investment flow-through (SIFT) trust for Canadian income tax purposes</li>
-</ul>
+                                                ]">A registered charity or other qualified donee<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">If you are looking for information about a charity or other qualified donee, is the information you are seeking publicly available?</p>
+
 </div>
 <ul>
 <li data-wb-fieldflow="[
@@ -514,19 +509,8 @@
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning, #capacity2022, #affected-owner-2022, #capacity-affected2022&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning, #capacity2022, #affected-owner-2022, #capacity-affected2022&quot;, &quot;class&quot;: &quot;visible&quot;}
                                                 ]">No<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Do you own the residential property as a partner of a partnership?</p>
-<details><summary>What is a partnership?</summary><p>For UHT purposes, in all parts of Canada (other than Quebec), the CRA interprets the term partnership to mean the relationship that exists between persons carrying on a business in common with a view to profit.</p>
-<details><summary>Partnerships constituted in Quebec</summary><p>For partnerships constituted in Quebec, the CRA interprets the term partnership based on the legal definition of contract of partnership in the Civil Code of Quebec:</p>
-<blockquote>“A contract of partnership is a contract by which the parties, in a spirit of cooperation, agree to carry on an activity, including the operation of an enterprise, to contribute thereto by combining property, knowledge or activities and to share among themselves any resulting pecuniary profits”</blockquote>
-</details> <br><p>The fact that two people own a property together does not, of itself, create a partnership.</p>
-<p>A familial relationship between two or more people who own a residential property does not, of itself, create a partnership, regardless of whether they are related by:</p>
-<ul>
-<li>marriage</li>
-<li>a common-law partnership (for example, two individuals who cohabit in a conjugal relationship throughout a continuous 12-month period)</li>
-<li>a blood relationship (for example, a parent and a child; a brother and a sister)</li>
-<li>adoption</li>
-</ul>
-<br><p>Review tax notice: <a href="/en/revenue-agency/services/forms-publications/publications/uhtn15/questions-answers-underused-housing-tax.html#_Toc130994813">UHTN15, Questions about partnerships</a></p>
-</details></div>
+ 
+</div>
 <ul>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#excluded-owner-2022, #unsure&quot;, &quot;class&quot;: &quot;hidden&quot;},
@@ -552,12 +536,8 @@
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning, #capacity2022, #affected-owner-2022, #capacity-affected2022&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning, #capacity2022, #affected-owner-2022, #capacity-affected2022&quot;, &quot;class&quot;: &quot;visible&quot;}
-                                                ]">A foreign national<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Do you own the residential property as a trustee of any of the following trusts?</p>
-<ul>
-<li>A mutual fund trust for Canadian income tax purposes</li>
-<li>A real estate investment trust for Canadian income tax purposes</li>
-<li>A specified investment flow-through (SIFT) trust for Canadian income tax purposes</li>
-</ul>
+                                                ]"> Government records not related to an individual taxpayer <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Do you own the residential property as a trustee of any of the following trusts?</p>
+
 </div>
 <ul>
 <li data-wb-fieldflow="[
@@ -578,7 +558,7 @@
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning, #capacity2022, #affected-owner-2022, #capacity-affected2022&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning, #capacity2022, #affected-owner-2022, #capacity-affected2022&quot;, &quot;class&quot;: &quot;visible&quot;}
-                                                ]">A corporation<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Is your corporation any of the following:</p>
+                                                ]"> Personal information <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Is your corporation any of the following:</p>
 <ul>
 <li>A registered charity for Canadian income tax purposes</li>
 <li>A cooperative housing corporation, hospital authority, municipality, para-municipal organization, public college, school authority, or university for Canadian GST/HST purposes</li>
@@ -668,25 +648,25 @@
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #unsure, #capacity2022&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;hidden&quot;}
-                                                ]">A registered charity for Canadian income tax purposes</li>
+                                                ]"> Corporation </li>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #unsure, #capacity2022&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #unsure, #capacity2022&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;hidden&quot;}
-                                                ]">A cooperative housing corporation, hospital authority, municipality, para-municipal organization, public college, school authority, or university for Canadian GST/HST purposes</li>
+                                                ]">Partnership</li>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #unsure, #capacity2022&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #unsure, #capacity2022&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;hidden&quot;}
-                                                ]">An Indigenous governing body</li>
+                                                ]">Trust Account</li>
 <li data-wb-fieldflow="[
                                                         {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #unsure, #capacity2022&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                         {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #unsure, #capacity2022&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                         {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                         {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;hidden&quot;}
-                                                        ]">The government of Canada or a province, or an agent of the government of Canada or a province</li>
+                                                        ]">Information about my current or previous CRA employment</li>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#affected-owner-2022, #excluded-owner-2022, #warning&quot;, &quot;class&quot;: &quot;visible&quot;},
