--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -206,24 +206,12 @@
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#res_2023&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#res_2023&quot;, &quot;class&quot;: &quot;hidden&quot;}
                                                 ]">Personal information under the requirements of the <i>Privacy Act</i>.    <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Who is requesting the information ? </p>
-<details><summary>What is a partnership?</summary><p>For UHT purposes, in all parts of Canada (other than Quebec), the CRA interprets the term partnership to mean the relationship that exists between persons carrying on a business in common with a view to profit.</p>
-<details><summary>Partnerships constituted in Quebec</summary><p>For partnerships constituted in Quebec, the CRA interprets the term partnership based on the legal definition of contract of partnership in the Civil Code of Quebec:</p>
-<blockquote>“A contract of partnership is a contract by which the parties, in a spirit of cooperation, agree to carry on an activity, including the operation of an enterprise, to contribute thereto by combining property, knowledge or activities and to share among themselves any resulting pecuniary profits”</blockquote>
-</details> <br><p>The fact that two people own a property together does not, of itself, create a partnership.</p>
-<p>A familial relationship between two or more people who own a residential property does not, of itself, create a partnership, regardless of whether they are related by:</p>
-<ul>
-<li>marriage</li>
-<li>a common-law partnership (for example, two individuals who cohabit in a conjugal relationship throughout a continuous 12-month period)</li>
-<li>a blood relationship (for example, a parent and a child; a brother and a sister)</li>
-<li>adoption</li>
-</ul>
-<br><p>Review tax notice: <a href="/en/revenue-agency/services/forms-publications/publications/uhtn15/questions-answers-underused-housing-tax.html#_Toc130994813">UHTN15, Questions about partnerships</a></p>
-</details></div>
+</div>
 <ul>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;visible&quot;}
-                                                ]">Yes<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Is the partnership a specified Canadian partnership?</p>
+                                                ]">An individual requesting for myself  <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Are you currently or previously an employee of the Canada Revenue Agency? </p>
 </div>
 <ul>
 <li data-wb-fieldflow="[
@@ -244,7 +232,7 @@
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;visible&quot;}
-                                                ]">No<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><p>Do you own the residential property as a trustee of a trust?</p>
+                                                ]">A representative requesting for someone else <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><p>If you are a representative, who are you applying on behalf of ? </p>
 <ul>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;hidden&quot;},
