--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -237,7 +237,7 @@
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;visible&quot;}
-                                                ]">Yes<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Is the trust any of the following:</p>
+                                                ]">Someone else <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Is the trust any of the following:</p>
 <ul>
 <li>A specified Canadian trust</li>
 <li>A mutual fund trust for Canadian income tax purposes</li>
@@ -264,7 +264,7 @@
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#result, #excluded-owner-2023, #warning, #capacity, #affected-owner-2023, #capacity-affected&quot;, &quot;class&quot;: &quot;visible&quot;}
-                                                ]">No<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Are you:</p>
+                                                ]">Someone who is deceased <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Are you:</p>
 <details><summary>Who is a foreign national?</summary><p>A foreign national is an individual who is <strong>not</strong> a citizen or permanent resident of Canada.</p>
 </details></div>
 <ul>
