--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -168,7 +168,7 @@
 	<p>The following information that CRA <b>does not</b> have:</p> 
 	<ul class="fa-ul">
 	<li><span class="fas fa-times text-danger fa-li"></span>Information about administering social insurance numbers (applications, replacements for lost or stolen cards, or forgotten numbers) or employment insurance. Please go to <a href="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html"> Serive Canada.</a> </li> 
-	<li><span class="fas fa-times text-danger fa-li"></span>Information about your travel history outside Canada.. Please go to <a href="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html"> Canada Border Services Agency.</a> </li> 	
+	<li><span class="fas fa-times text-danger fa-li"></span>Information about your travel history outside Canada. Please go to <a href="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html"> Canada Border Services Agency.</a> </li> 	
 </ul>
 	
 
