--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -696,7 +696,7 @@ You are unsure</h4>
 </div>
 </div>
 </details> <details id="text_version"><summary>Text version</summary><p>Use this version if you do not want to answer <a href="#interactive">interactive questions</a>.</p>
-<details><summary>Request for personal information under Privacy Act without fee</summary><h3 id="h_1_2-2023">Types of owners</h3>
+<details><summary>Request for personal information under <i>Privacy Act</i> without fee</summary><h3 id="h_1_2-2023">Types of owners</h3>
 <p>There are 2 types of owners for the purposes of the Underused Housing Tax:</p>
 <ul>
 <li>Affected owner</li>
@@ -790,7 +790,7 @@ You are unsure</h4>
 <li>An individual who is a citizen or permanent resident of Canada and an owner of the residential property as a personal representative of a deceased individual</li>
 </ul>
 <p>Review tax notice: <a href="/en/revenue-agency/services/forms-publications/publications/uhtn16/proposed-amendments-to-underused-housing-tax.html#_Toc157159129" target="_blank">UHTN16, Revised definition of excluded owners</a></p>
-</details> <details><summary>Request for government records under Access to information Act with $5 fee</summary><h3 id="h_1_2">Types of owners</h3>
+</details> <details><summary>Request for government records under <i>Access to information Act</i> with $5 fee</summary><h3 id="h_1_2">Types of owners</h3>
 <p>There are 2 types of owners for the purposes of the Underused Housing Tax:</p>
 <ul>
 <li>Affected owner</li>
